--- a/SentenceBERT_similarity.ipynb
+++ b/SentenceBERT_similarity.ipynb
@@ -99,7 +99,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = pd.read_csv('./Books.csv', encoding = 'utf-8')[:20]"
+        "data = pd.read_csv('./Books.csv', encoding = 'utf-8')"
       ],
       "metadata": {
         "id": "2IJfKaHzvoKd"
